// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic transformation: code 1`] = `
"/* ExampleComponent.svelte generated by Svelte v3.24.1 */
\\"use strict\\";

const { SvelteComponentDev, add_location, attr_dev, detach_dev, dispatch_dev, element, globals, init, insert_dev, noop, safe_not_equal, validate_slots } = require(\\"svelte/internal\\");
const { Object: Object_1 } = globals;
const file = \\"ExampleComponent.svelte\\";

function create_fragment(ctx) {
	let button;

	const block = {
		c: function create() {
			button = element(\\"button\\");
			attr_dev(button, \\"id\\", \\"btn\\");
			attr_dev(button, \\"class\\", \\"svelte-1jer79s\\");
			add_location(button, file, 12, 0, 272);
		},
		l: function claim(nodes) {
			throw new Error(\\"options.hydrate only works if the component was compiled with the \`hydratable: true\` option\\");
		},
		m: function mount(target, anchor) {
			insert_dev(target, button, anchor);
		},
		p: noop,
		i: noop,
		o: noop,
		d: function destroy(detaching) {
			if (detaching) detach_dev(button);
		}
	};

	dispatch_dev(\\"SvelteRegisterBlock\\", {
		block,
		id: create_fragment.name,
		type: \\"component\\",
		source: \\"\\",
		ctx
	});

	return block;
}

function instance($$self, $$props, $$invalidate) {
	\\"use strict\\";
	Object.defineProperty(exports, \\"__esModule\\", { value: true });
	const svelte_1 = require(\\"svelte\\");

	svelte_2.onMount(() => {
		
	});

	const writable_props = [];

	Object_1.keys($$props).forEach(key => {
		if (!~writable_props.indexOf(key) && key.slice(0, 2) !== \\"$$\\") console.warn(\`<ExampleComponent> was created with unknown prop '\${key}'\`);
	});

	let { $$slots = {}, $$scope } = $$props;
	validate_slots(\\"ExampleComponent\\", $$slots, []);
	$$self.$capture_state = () => ({ svelte_1 });
	return [];
}

class ExampleComponent extends SvelteComponentDev {
	constructor(options) {
		super(options);
		init(this, options, instance, create_fragment, safe_not_equal, {});

		dispatch_dev(\\"SvelteRegisterComponent\\", {
			component: this,
			tagName: \\"ExampleComponent\\",
			options,
			id: create_fragment.name
		});
	}
}

exports.default = ExampleComponent;Object.defineProperty(exports, \\"__esModule\\", { value: true });"
`;

exports[`basic transformation: sourcemap 1`] = `
Object {
  "mappings": ";;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;CAAkB,YAAY;CAC9B,MAAM,CAAC,cAAc,CAAC,OAAO,EAAE,YAAY,IAAI,KAAK,EAAE,IAAI;OACpD,QAAQ,GAAG,OAAO,CAAC,QAAQ;;CACjC,QAAQ,CAAC,OAAO;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;",
  "names": Array [],
  "sources": Array [
    "ExampleComponent.svelte",
  ],
  "sourcesContent": Array [
    "<script lang=\\"ts\\">\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const svelte_1 = require(\\"svelte\\");
svelte_2.onMount(() => { });
//# sourceMappingURL=ExampleComponent.svelte.js.map</script>

<style>
  button {
    color: #000;
  }
</style>

<button id=\\"btn\\" />
",
  ],
  "version": 3,
}
`;

exports[`with options: code 1`] = `
"/* ExampleComponent.svelte generated by Svelte v3.24.1 */
\\"use strict\\";

const { SvelteElement, add_location, attr_dev, detach_dev, dispatch_dev, element, globals, init, insert_dev, noop, safe_not_equal, validate_slots } = require(\\"svelte/internal\\");
const { Object: Object_1 } = globals;
const file = \\"ExampleComponent.svelte\\";

function create_fragment(ctx) {
	let button;

	const block = {
		c: function create() {
			button = element(\\"button\\");
			this.c = noop;
			attr_dev(button, \\"id\\", \\"btn\\");
			add_location(button, file, 12, 0, 272);
		},
		l: function claim(nodes) {
			throw new Error(\\"options.hydrate only works if the component was compiled with the \`hydratable: true\` option\\");
		},
		m: function mount(target, anchor) {
			insert_dev(target, button, anchor);
		},
		p: noop,
		i: noop,
		o: noop,
		d: function destroy(detaching) {
			if (detaching) detach_dev(button);
		}
	};

	dispatch_dev(\\"SvelteRegisterBlock\\", {
		block,
		id: create_fragment.name,
		type: \\"component\\",
		source: \\"\\",
		ctx
	});

	return block;
}

function instance($$self, $$props, $$invalidate) {
	\\"use strict\\";
	Object.defineProperty(exports, \\"__esModule\\", { value: true });
	const svelte_1 = require(\\"svelte\\");

	svelte_2.onMount(() => {
		
	});

	const writable_props = [];

	Object_1.keys($$props).forEach(key => {
		if (!~writable_props.indexOf(key) && key.slice(0, 2) !== \\"$$\\") console.warn(\`<snapshot-example> was created with unknown prop '\${key}'\`);
	});

	let { $$slots = {}, $$scope } = $$props;
	validate_slots(\\"snapshot-example\\", $$slots, []);
	$$self.$capture_state = () => ({ svelte_1 });
	return [];
}

class ExampleComponent extends SvelteElement {
	constructor(options) {
		super();
		this.shadowRoot.innerHTML = \`<style>button{color:#000}</style>\`;
		init(this, { target: this.shadowRoot }, instance, create_fragment, safe_not_equal, {});

		if (options) {
			if (options.target) {
				insert_dev(options.target, this, options.anchor);
			}
		}
	}
}

customElements.define(\\"snapshot-example\\", ExampleComponent);
exports.default = ExampleComponent;Object.defineProperty(exports, \\"__esModule\\", { value: true });"
`;

exports[`with options: sourcemap 1`] = `
Object {
  "mappings": ";;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;CAAkB,YAAY;CAC9B,MAAM,CAAC,cAAc,CAAC,OAAO,EAAE,YAAY,IAAI,KAAK,EAAE,IAAI;OACpD,QAAQ,GAAG,OAAO,CAAC,QAAQ;;CACjC,QAAQ,CAAC,OAAO;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;",
  "names": Array [],
  "sources": Array [
    "ExampleComponent.svelte",
  ],
  "sourcesContent": Array [
    "<script lang=\\"ts\\">\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", { value: true });
const svelte_1 = require(\\"svelte\\");
svelte_2.onMount(() => { });
//# sourceMappingURL=ExampleComponent.svelte.js.map</script>

<style>
  button {
    color: #000;
  }
</style>

<button id=\\"btn\\" />
",
  ],
  "version": 3,
}
`;
